@@ -1,39 +1,38 @@
-import weakref
-from .common.element import Element, LightElement
-from .common.group import Group
-from .common.layout import VerticalLayout, HorizontalLayout
-from .common.spacer import Spacer
-from .qt import *
-from .qt.adapter import Adapter
-from .qt.Application import Application
-from .qt.Button import Button
-from .qt.CheckBox import CheckBox, HeadingCheckBox
-from .qt.Color import Color
-from .qt.Choice import Choice, ItemChoice
-from .qt.ComboBox import ComboBox
-from .qt.dialog import Dialog
-from .qt.dialogbuttons import DialogButtons
-from .qt.DirDialog import DirDialog
-from .qt.DrawingContext import DrawingContext, Font
-from .qt.FileDialog import FileDialog, pick_directory, pick_file, pick_files
-from .qt.HeadingLabel import HeadingLabel
-from .qt.Icon import Icon
-from .qt.Image import Image
-from .qt.ImageButton import ImageButton
-from .qt.ImageView import ImageView
-from .qt.label import Label, PlainLabel, URLLabel, MultiLineLabel
-from .qt.legacydialog import LegacyDialog
-from .qt.ListView import ListView
-from .qt.Menu import Menu, PopupMenu
-from .qt.Panel import Panel
-from .qt.scrollarea import VerticalScrollArea
-from .qt.SpinCtrl import SpinCtrl
-from .qt.System import System
-from .qt.timer import IntervalTimer
-from .qt.TextArea import TextArea
-from .qt.TextField import TextField, PasswordField
-from .qt.VerticalItemView import VerticalItemView
-from .qt.window import Window
+from fsui.common.element import Element, LightElement
+from fsui.common.group import Group
+from fsui.common.layout import VerticalLayout, HorizontalLayout
+from fsui.common.spacer import Spacer
+from fsui.qt import *
+from fsui.qt.adapter import Adapter
+from fsui.qt.Application import Application
+from fsui.qt.Button import Button
+from fsui.qt.CheckBox import CheckBox, HeadingCheckBox
+from fsui.qt.Color import Color
+from fsui.qt.Choice import Choice, ItemChoice
+from fsui.qt.ComboBox import ComboBox
+from fsui.qt.dialog import Dialog
+from fsui.qt.dialogbuttons import DialogButtons
+from fsui.qt.DirDialog import DirDialog
+from fsui.qt.DrawingContext import DrawingContext, Font
+from fsui.qt.FileDialog import FileDialog, pick_directory, pick_file, pick_files
+from fsui.qt.HeadingLabel import HeadingLabel
+from fsui.qt.Icon import Icon
+from fsui.qt.Image import Image
+from fsui.qt.ImageButton import ImageButton
+from fsui.qt.ImageView import ImageView
+from fsui.qt.label import Label, PlainLabel, URLLabel, MultiLineLabel
+from fsui.qt.legacydialog import LegacyDialog
+from fsui.qt.ListView import ListView
+from fsui.qt.Menu import Menu, PopupMenu
+from fsui.qt.Panel import Panel
+from fsui.qt.scrollarea import VerticalScrollArea
+from fsui.qt.SpinCtrl import SpinCtrl
+from fsui.qt.System import System
+from fsui.qt.timer import IntervalTimer
+from fsui.qt.TextArea import TextArea
+from fsui.qt.TextField import TextField, PasswordField
+from fsui.qt.VerticalItemView import VerticalItemView
+from fsui.qt.window import Window
 
 
 default_window_parent = []
@@ -60,28 +59,28 @@ def open_window_instance(cls, parent=None):
     cls._window_instance.show()
     return cls._window_instance
 
-    def monitor_instance_2(count):
-        if count < 100:
-            call_after(monitor_instance_2, count + 1)
-            return
-        print("DESTROYED SIGNAL RECEIVED 2")
-        instance = weak_instance()
-        if instance is not None:
-            print("WARNING: SettingsDialog is still alive")
-            import gc
-            print(gc.get_referrers(instance))
-            print("real window:")
-            print(gc.get_referrers(instance.real_window()))
-        else:
-            print("Instance is now", instance)
-
-    def monitor_instance():
-        print("DESTROYED SIGNAL RECEIVED")
-        call_after(monitor_instance_2, 1)
-
-    weak_instance = weakref.ref(cls._window_instance)
-    # cls._window_instance.destroyed.connect(monitor_instance)
-    cls._window_instance.closed.connect(monitor_instance)
+    # def monitor_instance_2(count):
+    #     if count < 100:
+    #         call_after(monitor_instance_2, count + 1)
+    #         return
+    #     print("DESTROYED SIGNAL RECEIVED 2")
+    #     instance = weak_instance()
+    #     if instance is not None:
+    #         print("WARNING: SettingsDialog is still alive")
+    #         import gc
+    #         print(gc.get_referrers(instance))
+    #         print("real window:")
+    #         print(gc.get_referrers(instance.real_window()))
+    #     else:
+    #         print("Instance is now", instance)
+    #
+    # def monitor_instance():
+    #     print("DESTROYED SIGNAL RECEIVED")
+    #     call_after(monitor_instance_2, 1)
+    #
+    # weak_instance = weakref.ref(cls._window_instance)
+    # # cls._window_instance.destroyed.connect(monitor_instance)
+    # cls._window_instance.closed.connect(monitor_instance)
 
     # if getattr(cls, "_window_instance", None) and cls._window_instance():
     #     cls._window_instance().raise_and_activate()
