@@ -2,10 +2,10 @@ import traceback
 import queue
 
 from fsui.res import gettext
-from .qt import init_qt, QDesktopWidget, QEvent, QObject, QCoreApplication, \
-    QTimer, QMessageBox, QCursor
-from .qt import *
-from .helpers import QParent
+from fsui.qt.qt import init_qt, QDesktopWidget, QEvent, QObject, \
+    QCoreApplication, QTimer, QMessageBox, QCursor
+from fsui.qt.qt import *
+from fsui.qt.helpers import QParent
 
 
 def get_screen_size():
