@@ -1,5 +1,6 @@
 Version 2.7.13dev:
 
+* Use expect_version option to verify that FS-UAE version matches.
 * Launcher can be started with a zip/lha file containing disk images [jbl007].
 * Launcher can be started with more than one floppy image path as
   command line arguments.
